--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation = "vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linear"
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/first_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_margin="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        >
-
-        <TextView
-            android:id="@+id/txt1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/app_name"
-            android:textColor="@color/red"
-            android:textSize="@dimen/text_size"
-            />
-
-        <ImageView
-            android:id="@+id/Plus"
-            android:layout_width="match_parent"
-            android:layout_height="273dp"
-            android:src="@drawable/plus" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:autofillHints="text"
-            android:background="@color/light_blue"
-            android:hint="@string/input_str"
-            android:inputType="text"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:text="@string/next_act"
-            app:layout_constraintStart_toStartOf="parent"
-            android:onClick="onClick"
-            />
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:text="@string/logout"
-            app:layout_constraintStart_toStartOf="parent"
-            android:onClick="logClick"
-            />
-    </LinearLayout>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
