--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,17 @@
 
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/first_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:navGraph = "@navigation/navigation"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
