--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@ app:startDestination="@id/start">
 
 <fragment
     android:id="@+id/start"
-    android:name="com.example.mirea.StartFragment"
+    android:name="com.example.mirea.View.StartFragment"
     android:label="Home"
     tools:layout="@layout/fragment_start">
     <action
@@ -20,7 +20,7 @@ app:startDestination="@id/start">
 
 <fragment
     android:id="@+id/list"
-    android:name="com.example.mirea.ListFragment"
+    android:name="com.example.mirea.View.ListFragment"
     android:label="ListView"
     tools:layout="@layout/fragment_list">
     <action
@@ -31,7 +31,7 @@ app:startDestination="@id/start">
 
 <fragment
     android:id="@+id/recycler"
-    android:name="com.example.mirea.RecyclerFragment"
+    android:name="com.example.mirea.View.RecyclerFragment"
     android:label="RecyclerView"
     tools:layout="@layout/fragment_recycler">
     <action
